Index file for cierge-js-client

--- a/CiergeJsClient/index.html
+++ b/CiergeJsClient/index.html
@@ -3,10 +3,34 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Cierge Js Client Demo</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
+    <script src="cierge-js-client.js"></script>
 </head>
 <body>
-    <script src="cierge-js-client.js"></script>
+    <ul>
+        <li>Username</li>
+        <li>Claims</li>
+    </ul>
 
+    <button class="button">Sign in</button>
+    <button class="button">Refresh</button>
+    <button class="button">Sign out</button>
+
+
+    <script>
+        console.log("hello");
+    </script>
+
+
+    <style>
+        body {
+            margin: auto;
+            width: 50%;
+            padding: 10%;
+        }
+    </style>
 </body>
 </html>
